# Homecord

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri-action.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/channels/: channels.rs
src-tauri/src/db/: loginHandler.rs
src-tauri/src/messages/: message.rs
src-tauri/src/user/: encryption.rs
src-tauri/src/webRTC/: mod.rs
src-tauri/src/webrtc_d/: manager.rs  mod.rs  peer.rs  signaling.rs
src/appearance/: AddChannelMenu.css  App.css  ChatPage.css  ColorPalette.ts  HomePage.css  LoginPage.css  MessageInput.css  ShoppingList.css  ShoppingList.tsx  Sidebar.css  UserProfileMenu.css  UserProfilePage.css  VoicePage.css
src/assets/: Thumbs.db
src/components/: AddButton.tsx  AddChannelMenu.tsx  ChannelElement.tsx  CodeBlock.tsx  ColorPaletteSelector.tsx  MarkdownRenderer.tsx  MessageInput.tsx  Notification.tsx  Sidebar.tsx  UserProfileMenu.tsx
src/hooks/: useChatSocket.ts  useWebRTC.ts  websocketManager.ts
src/pages/: ChatPage.tsx  HomePage.tsx  LoginPage.tsx  MessageInput.css  ShoppingListPage.tsx  Sidebar.css  UserProfilePage.tsx  VoicePage.tsx
src/types/: Interfaces.ts  List.tsx
