[package]
name = "homecord"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "homecord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "fs"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
sha2 = "0.10.9"
keyring = {version = "2.0", features = ["linux-secret-service"] }
urlencoding = "2.1.3"
chrono = { version = "0.4", features = ["serde"] }
webrtc = "0.13.0"
futures = "0.3"

